[package]
name = "server"
version.workspace = true
edition.workspace = true

[dependencies]
common = { path = "../common" }
package = { path = "../package" }
bincode = "1.3.3"
hashbrown = "0.15.0"
mio = { version = "1.0.2", features = ["net", "os-poll"] }
parking_lot = "0.12.3"
rquickjs = { version = "0.6.2", features = ["macro"] }
serde = { version = "1.0.214", features = ["derive"] }
