[package]
name = "server"
version.workspace = true
edition.workspace = true

[dependencies]
common = { path = "../common" }
package = { path = "../package" }
bincode = "1.3.3"
hashbrown = "0.15.2"
parking_lot = "0.12.3"
rquickjs = { version = "0.8.1", features = ["macro"] }
serde = { version = "1.0.216", features = ["derive"] }
tokio = { version = "1.42.0", features = ["full"] }
